[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://assets/prev.png" type="Texture" id=4]
[ext_resource path="res://assets/next.png" type="Texture" id=5]
[ext_resource path="res://src/actors/AnimatedBody.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/locker/Locker.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/DSEG7ClassicMini-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 78
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Shop" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="AnimatedBody" parent="." instance=ExtResource( 6 )]
position = Vector2( 332, 154 )
rotation = -3.14159
shoulder_color = Color( 1, 1, 1, 1 )
arm_color = Color( 1, 1, 1, 1 )
upper_arm_color = Color( 1, 1, 1, 1 )

[node name="CurrentItem" type="Sprite" parent="."]
position = Vector2( 352, 644 )
scale = Vector2( 4, 4 )

[node name="Price" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 844.0
margin_right = 623.0
margin_bottom = 928.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Ball" type="Sprite" parent="."]
position = Vector2( 450, 269 )
rotation = -3.14159
scale = Vector2( 0.6, 0.6 )

[node name="Locker" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 351, 661 )

[node name="Type" type="Node2D" parent="."]
position = Vector2( 302, 789 )

[node name="NextType" type="TextureButton" parent="Type"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = 257.0
margin_top = -440.0
margin_right = 307.0
margin_bottom = -376.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevType" type="TextureButton" parent="Type"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = -267.0
margin_top = -437.0
margin_right = -217.0
margin_bottom = -373.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="Type"]
margin_left = -259.0
margin_top = -427.0
margin_right = 341.0
margin_bottom = -343.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BALL"
align = 1

[node name="ItemButtons" type="Node2D" parent="."]
position = Vector2( 302, 673 )

[node name="NextItem" type="TextureButton" parent="ItemButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = 263.0
margin_top = 18.0
margin_right = 313.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )

[node name="PrevItem" type="TextureButton" parent="ItemButtons"]
modulate = Color( 0.137255, 0.658824, 0.756863, 1 )
margin_left = -276.0
margin_top = 13.0
margin_right = -226.0
margin_bottom = 87.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -4.0
margin_top = 879.0
margin_right = 714.0
margin_bottom = 1279.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 149.0
margin_top = 96.0
margin_right = 569.0
margin_bottom = 304.0

[node name="Buy" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 420.0
margin_bottom = 99.0
rect_min_size = Vector2( 420, 0 )
theme = ExtResource( 2 )
text = "BUY"

[node name="GoBack" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 420.0
margin_bottom = 208.0
theme = ExtResource( 2 )
text = "GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Type/NextType" to="." method="_on_NextType_pressed"]
[connection signal="pressed" from="Type/PrevType" to="." method="_on_PrevType_pressed"]
[connection signal="pressed" from="ItemButtons/NextItem" to="." method="_on_NextItem_pressed"]
[connection signal="pressed" from="ItemButtons/PrevItem" to="." method="_on_PrevItem_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GoBack" to="." method="_on_GoBack_pressed"]
